--- a/www/templates/help.html
+++ b/www/templates/help.html
@@ -3,10 +3,12 @@
     <button class="button button-icon icon ion-home" ui-sref="home"></button>
     <div class="h1 title">Help</div>
   </div>
-  <ion-content>
+  <ion-content class="has-header">
     <ion-slide-box>
       <ion-slide>
-        <div class="box blue"><h1>BLUE</h1></div>
+        <div class="box blue">
+          <div><img src="../img/logo.png"/></div>
+        </div>
       </ion-slide>
       <ion-slide>
         <div class="box yellow"><h1>YELLOW</h1></div>
