--- a/www/templates/board.html
+++ b/www/templates/board.html
@@ -1,6 +1,6 @@
 <ion-view ng-scroll="false">
   <div class="bar bar-header bar-calm header-dark-wood">
-    <button class="button button-icon icon ion-home" ui-sref="home"></button>
+    <button class="button button-icon icon ion-home" ng-click="goHome()"></button>
     <div class="h1 title">100</div>
   </div>
   <ion-content class="board-outer has-header has-footer" scroll="false">
