--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,8 +1,9 @@
 <ion-view>
   <ion-content>
-    <div class="list list-inset">
+    <div class="logo"><img src="../img/logo.png"/></div>
+    <div class="list list-inset home-list">
 
-      <a class="item" ng-click="go('board', true)">
+      <a class="item" ui-sref="board">
         Start
       </a>
 
