--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,6 +1,6 @@
 <ion-view>
   <ion-content>
-    <div class="logo"><img src="../img/logo.png"/></div>
+    <div class="logo"><img src="img/logo.png"/></div>
     <div class="list list-inset home-list">
 
       <a class="item" ui-sref="board">
@@ -11,7 +11,7 @@
         Help
       </a>
 
-      <a class="item" ui-sref="contact">
+      <a class="item" href="mailto:shalevshalit@gmail.com">
         Contact Us
       </a>
 
