--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -11,7 +11,7 @@
         Help
       </a>
 
-      <a class="item" href="mailto:shalevshalit@gmail.com">
+      <a class="item" ng-click="sendMail()">
         Contact Us
       </a>
 
