--- a/www/templates/help.html
+++ b/www/templates/help.html
@@ -16,7 +16,7 @@
           </ul>
         </div>
         <div class="help-img">
-          <img src="../img/help/help1.jpg"/>
+          <img src="img/help/help1.jpg"/>
         </div>
       </div>
     </ion-slide>
@@ -30,7 +30,7 @@
           </ul>
         </div>
         <div class="help-img">
-          <img src="../img/help/help2.jpg"/>
+          <img src="img/help/help2.jpg"/>
         </div>
       </div>
     </ion-slide>
@@ -41,7 +41,7 @@
         </ul>
       </div>
       <div class="help-img">
-        <img src="../img/help/help3.jpg"/>
+        <img src="img/help/help3.jpg"/>
       </div>
     </ion-slide>
     <ion-slide>
@@ -52,7 +52,7 @@
         </ul>
       </div>
       <div class="help-logo">
-        <img src="../img/logo.png"/>
+        <img src="img/logo.png"/>
         <div class="list list-inset home-list">
           <a class="item" ui-sref="board">
             Start
