--- a/www/templates/help.html
+++ b/www/templates/help.html
@@ -9,7 +9,7 @@
         <div class="help-desc">
           <ul>
             <li>Press on the green dot to add a number to a square.</li>
-            <li>The next Number must be <b>3 jumps to the left/right/top/bottom side</b> and <b>2 jumps to a
+            <li>The next number must be <b>3 jumps to the left/right/top/bottom side</b> and <b>2 jumps to a
               diagonal</b>.
             </li>
             <li>You cannot press on a square that already has number in it.</li>
