add multiplayer game

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -7,6 +7,10 @@
         Start
       </a>
 
+      <a class="item" ui-sref="multiplayer">
+        MultiPlayer
+      </a>
+
       <a class="item" ui-sref="help">
         Help
       </a>
