--- a/www/templates/multiplayer-board.html
+++ b/www/templates/multiplayer-board.html
@@ -1,4 +1,4 @@
-<ion-view ng-scroll="false">
+<ion-view ng-scroll="false" class="multiplayer">
   <div class="bar bar-header bar-calm header-dark-wood">
     <button class="button button-icon icon ion-home" ng-click="goHome()"></button>
     <div class="h1 title">100</div>
@@ -7,15 +7,15 @@
     <board></board>
   </ion-content>
   <div class="tabs tabs-icon-only actions">
-    <div class="tab-item" ng-click="revert()">
-      <i class="icon ion-arrow-return-left"></i>
+    <div class="tab-item" disabled="disabled">
+      {{players.player1}}
     </div>
     <div class="tab-item score" disabled="disabled" id="score">
       <div class="score-number">{{number - 1}}</div>
       <div class="score-bar" ng-style="{'width': (number - 1) / 100 * scoreEl.offsetWidth + 'px'}"></div>
     </div>
-    <div class="tab-item" ng-click="restart()">
-      <i class="icon ion-refresh"></i>
+    <div class="tab-item" disabled="disabled">
+      {{players.player2}}
     </div>
   </div>
 </ion-view>
