--- a/www/css/style.css
+++ b/www/css/style.css
@@ -102,7 +102,9 @@ ion-content {
 }
 
 .logo {
-  padding: 20px;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-left: 20px;
   text-align: center;
 }
 
@@ -183,4 +185,16 @@ ion-content {
 .help-logo img {
   width: 100%;
   height: auto;
+}
+
+.multiplayer .actions .tab-item {
+  opacity: 1 !important;
+}
+
+.multiplayer .board-col.clicked:not(.enemy) {
+  background: url("../img/retina_wood_self.jpg") center center !important;
+}
+
+.multiplayer .board-col.clicked.enemy {
+  background: url("../img/retina_wood_enemy.jpg") center center !important;
 }
