--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -8,7 +8,7 @@
       </a>
 
       <a class="item" ui-sref="multiplayer">
-        MultiPlayer
+        MultiPlayer<span class="beta">(beta)</span>
       </a>
 
       <a class="item" ui-sref="help">
