--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -3,8 +3,12 @@
     <div class="logo"><img src="img/logo.png"/></div>
     <div class="list list-inset home-list">
 
-      <a class="item" ui-sref="board">
+      <a class="item" ui-sref="picklvl">
         Start
+      </a>
+
+      <a class="item" ng-click="openClassic()">
+        Classic
       </a>
 
       <a class="item" ui-sref="multiplayer">
