--- a/www/templates/board.html
+++ b/www/templates/board.html
@@ -1,7 +1,7 @@
 <ion-view ng-scroll="false">
   <div class="bar bar-header bar-calm header-dark-wood">
     <button class="button button-icon icon ion-home" ng-click="goHome()"></button>
-    <div class="h1 title">{{ level ? 'Level ' + currentLvl : 100}}</div>
+    <div class="h1 title">{{ level ? 'LEVEL ' + currentLvl : 100}}</div>
   </div>
   <ion-content class="board-outer has-header has-footer" scroll="false">
     <board></board>
