--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -3,7 +3,7 @@
     <div class="logo"><img src="img/logo.png"/></div>
     <div class="list list-inset home-list">
 
-      <a class="item" ui-sref="picklvl">
+      <a class="item" ui-sref="pickChapter">
         Start
       </a>
 
