--- a/www/templates/pick-level.html
+++ b/www/templates/pick-level.html
@@ -1,10 +1,10 @@
 <ion-view>
   <div class="bar bar-header bar-calm header-dark-wood">
     <button class="button button-icon icon ion-home" ng-click="goHome()"></button>
-    <div class="h1 title">100</div>
+    <div class="h1 title">CHAPTER {{currentChapter}}</div>
   </div>
   <ion-content class="has-header">
-    <div class="list list-inset pick-list">
+    <div id="lvl-list" class="list list-inset pick-list">
       <a class="item"
          ng-click="openLvl(lvl)"
          ng-repeat="lvl in levels"
