--- a/www/templates/board.html
+++ b/www/templates/board.html
@@ -8,7 +8,7 @@
   <ion-content class="board-outer has-header has-footer" scroll="false">
     <board></board>
   </ion-content>
-  <div class="tabs tabs-icon-only actions">
+  <div id="actions" class="tabs tabs-icon-only actions">
     <div class="tab-item" ng-click="revert()">
       <i class="icon ion-arrow-return-left"></i>
     </div>
