--- a/www/templates/registration/signup.html
+++ b/www/templates/registration/signup.html
@@ -3,6 +3,9 @@
     <div class="logo"><img src="img/logo.png"/></div>
     <div class="list list-inset">
       <label class="item item-input">
+        <input type="text" placeholder="User Name" ng-model="newUser.username">
+      </label>
+      <label class="item item-input">
         <input type="text" placeholder="Email" ng-model="newUser.email">
       </label>
       <label class="item item-input">
