--- a/www/templates/registration/signup.html
+++ b/www/templates/registration/signup.html
@@ -15,7 +15,6 @@
     <button class="button button-block button-positive" ng-click="signup()">
       Sign Up
     </button>
-    <div class="text-center card"><a ui-sref="login">Already have a user? Login!</a> | <a ui-sref="home">I will do it
-      later</a></div>
+    <div class="text-center card"><a ui-sref="login">Already have a user? Login!</a></div>
   </ion-content>
 </ion-view>
